# backend/src/main/java/com/bfg/platform/competition/entity/CompetitionDiscipline.java
@@ -1,65 +1,0 @@
-package com.bfg.platform.competition.entity;
-
-import jakarta.persistence.Column;
-import jakarta.persistence.Entity;
-import jakarta.persistence.FetchType;
-import jakarta.persistence.GeneratedValue;
-import jakarta.persistence.GenerationType;
-import jakarta.persistence.Id;
-import jakarta.persistence.JoinColumn;
-import jakarta.persistence.ManyToOne;
-import jakarta.persistence.Table;
-import lombok.AccessLevel;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.EqualsAndHashCode;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
-import lombok.ToString;
-
-import java.time.Instant;
-import java.util.UUID;
-
-@Entity
-@Table(name = "competition_disciplines")
-@Data
-@NoArgsConstructor
-@AllArgsConstructor(access = AccessLevel.PRIVATE)
-@Builder
-public class CompetitionDiscipline {
-
-    @Id
-    @GeneratedValue(strategy = GenerationType.UUID)
-    @Column(name = "id", updatable = false)
-    @Setter(AccessLevel.NONE)
-    private UUID id;
-
-    @Column(name = "competition_id")
-    private UUID competitionId;
-
-    @ManyToOne(fetch = FetchType.LAZY)
-    @JoinColumn(name = "competition_id", insertable = false, updatable = false)
-    @Setter(AccessLevel.NONE)
-    @ToString.Exclude
-    @EqualsAndHashCode.Exclude
-    private Competition competition;
-
-    @Column(name = "discipline_id")
-    private UUID disciplineId;
-
-    @ManyToOne(fetch = FetchType.LAZY)
-    @JoinColumn(name = "discipline_id", insertable = false, updatable = false)
-    @Setter(AccessLevel.NONE)
-    @ToString.Exclude
-    @EqualsAndHashCode.Exclude
-    private DisciplineDefinition discipline;
-
-    @Column(name = "created_at", insertable = false, updatable = false, nullable = false)
-    @Setter(AccessLevel.NONE)
-    private Instant createdAt;
-
-    @Column(name = "modified_at", insertable = false, nullable = false)
-    @Setter(AccessLevel.NONE)
-    private Instant modifiedAt;
-}
