# backend/src/main/java/com/bfg/platform/competition/entity/CompetitionDisciplineScheme.java
@@ -1,0 +1,46 @@
+package com.bfg.platform.competition.entity;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import lombok.AccessLevel;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import java.time.Instant;
+import java.util.UUID;
+
+@Entity
+@Table(name = "competition_discipline_schemes")
+@Data
+@NoArgsConstructor
+@AllArgsConstructor(access = AccessLevel.PRIVATE)
+@Builder
+public class CompetitionDisciplineScheme {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.UUID)
+    @Column(name = "id", updatable = false)
+    @Setter(AccessLevel.NONE)
+    private UUID id;
+
+    @Column(name = "competition_id", nullable = false)
+    private UUID competitionId;
+
+    @Column(name = "discipline_id", nullable = false)
+    private UUID disciplineId;
+
+    @Column(name = "created_at", insertable = false, updatable = false, nullable = false)
+    @Setter(AccessLevel.NONE)
+    private Instant createdAt;
+
+    @Column(name = "modified_at", insertable = false, nullable = false)
+    @Setter(AccessLevel.NONE)
+    private Instant modifiedAt;
+}
